--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "express": "^4.17.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "remult": "^0.12.9"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
